--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome">Welcome!</string>
-    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce metus tortor, lacinia finibus ultrices in, pretium in erat. Aliquam urna lorem, congue ac dictum ac, ultricies ac lacus. Praesent sit amet mi non orci dignissim pellentesque. Duis et ullamcorper nulla, quis bibendum urna. Morbi vitae turpis nec justo aliquet egestas. Cras varius, lorem at mollis pharetra, magna neque dignissim eros, nec interdum purus nisi in libero. Fusce rutrum dui non facilisis posuere. Mauris lacus dolor, vehicula vitae lorem sed, luctus sollicitudin quam.
-        Fusce cursus nisl at elit sodales, at pharetra nisl maximus. Vivamus pellentesque rhoncus suscipit. Integer sit amet turpis sit amet dolor blandit posuere nec et tortor. Nam quis urna sit amet dui hendrerit euismod id vitae lacus. Nam porta ac odio malesuada aliquet. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</string>
+    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce metus tortor, lacinia finibus ultrices in, pretium in erat. Aliquam urna lorem, congue ac dictum ac, ultricies ac lacus. Praesent sit amet mi non orci dignissim pellentesque. Duis et ullamcorper nulla, quis bibendum urna. Morbi vitae turpis nec justo aliquet egestas. Cras varius, lorem at mollis pharetra, magna neque dignissim eros, nec interdum purus nisi in libero. Fusce rutrum dui non facilisis posuere. Mauris lacus dolor, vehicula vitae lorem sed, luctus sollicitudin quam.</string>
 
 </resources>
