--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="password_label">Password</string>
     <string name="login_btn_text">Login</string>
     <string name="register_btn_text">Register</string>
+    <string name="next_btn_text">Next</string>
 </resources>
