Instructions UI done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,12 @@
     <string name="welcome">Welcome!</string>
     <string name="welcome_description">The Beer Store app is dedicated to help you store information about your favorite beers. Proceed to the next screen to view the instructions on how to use the application. </string>
     <string name="instructions">Instructions</string>
-    <string name="instructions_description">Add a beers with their details and enjoy your very own beer database presented in a list!</string>
+    <string name="instructions_description">Add beers with their details and enjoy your very own beer database presented in a list!</string>
     <string name="sign_in_header">Please sign in or register</string>
     <string name="email_label">Email</string>
     <string name="password_label">Password</string>
     <string name="login_btn_text">Login</string>
     <string name="register_btn_text">Register</string>
     <string name="next_btn_text">Next</string>
+    <string name="got_it_btn_text">Got it</string>
 </resources>
